--- a/frontend/antibiootit/package.json
+++ b/frontend/antibiootit/package.json
@@ -13,9 +13,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-katex": "^3.0.1",
+    "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^4.0.0",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
